--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=104.247.162.242\\MSSQLSERVER2019;Initial Catalog=bariscak_Camp;User Id=bariscak_adminCamp;Password=H7@t8x5h8; TrustServerCertificate=True"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
